<resources>

    <string name="about_us">About us</string>
    <string name="app_name">Room Multiplatform KMP</string>
    <string name="category">Category</string>
    <string name="contact_us">Contact us</string>
    <string name="download">Download</string>
    <string name="favorite_is_empty">Favorite is empty</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="name_demo">Demo Name</string>
    <string name="no_data_available">No Data Found</string>
    <string name="retry">Retry!</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="roboto_regular">sans-serif</string>
    <string name="share">Share</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>

</resources>