<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.vimal.margh.fragment.FragmentHome"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_favorites"
            app:destination="@id/navigation_favorites" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.vimal.margh.fragment.FragmentFavorite"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_navigation_favorites_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.vimal.margh.fragment.FragmentProfile"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>