<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FragmentProfile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@string/roboto_medium"
            android:gravity="center"
            android:text="@string/title_profile"
            android:textSize="22sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_toolbar">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/title_profile"
                android:padding="5dp"
                android:src="@drawable/icon_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/circleImageView"
                app:strokeColor="?android:textColorHighlight"
                app:strokeWidth="3dp" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mc_profile_name"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="25dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_profile_image">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@string/roboto_medium"
                    android:text="@string/name_demo"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="22sp" />


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mc_profile_share"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="0dp"
                android:layout_height="100dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="16dp"
                app:layout_constraintEnd_toStartOf="@+id/mc_profile_contact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mc_profile_name">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@string/roboto_regular"
                    android:text="@string/share"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="18sp" />


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mc_profile_contact"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="0dp"
                android:layout_height="100dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/mc_profile_share"
                app:layout_constraintTop_toBottomOf="@+id/mc_profile_name">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@string/roboto_regular"
                    android:text="@string/contact_us"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="18sp" />


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mc_about"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/mc_profile_contact">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@string/roboto_medium"
                    android:text="@string/about_us"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="18sp" />


            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/logout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mc_about" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>